--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,29 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+*.log
+logs/
 
+# Env
+.env
+.env.local
+.env.*.local
+
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 node_modules
 dist
 dist-ssr
 *.local
+.env
+
+# Build
+dist/
+build/
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +40,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+Thumbs.db
+
+# Test coverage
+coverage/
+
+# Git
+*.swp
+*.swo
+
+# Others
+*.tgz
